Updated reactive implementation